<resources>
    <string name="app_name">Pace Place</string>
    <string name="map_title">Map</string>
    <string name="book_finder_title">Find a Book</string>
    <string name="course_rater_title">Rate a Course</string>
    <string name="search_title">Books</string>
    <string name="search_hint">Find a Book</string>
    <string name="books_for_this_semester">Books for this Semester</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="submit_rating">SUBMIT</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login_text">Login</string>
    <string name="rate_a_course_text">RATE A COURSE</string>

    <string-array name="maps_array">
        <item>NYC</item>
        <item>WestChester</item>
    </string-array>

</resources>

