<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iconLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.paceplace.IconScreenActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="3">

    <RelativeLayout
        android:id="@+id/mapLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/mapImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@android:drawable/ic_menu_mapmode" />

        <TextView
            android:id="@+id/mapTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="88dp"
            android:layout_toEndOf="@+id/mapImage"
            android:gravity="center"
            android:text="@string/map_title"
            android:textColor="@color/logoSecondary"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bookFinderLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryMed"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/libraryimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/library_icon" />

        <TextView
            android:id="@+id/bookFinderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@+id/libraryimage"
            android:gravity="center"
            android:text="@string/book_finder_title"
            android:textColor="@color/logoSecondary"
            android:textSize="30sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/courseRaterLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryLight"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/courseRaterImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:src="@drawable/course_rater_icon"
            android:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/courseRaterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:text="@string/course_rater_title"
            android:textColor="@color/logoSecondary"
            android:textSize="30sp" />

    </RelativeLayout>
</LinearLayout>
